<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/detail_bg"
    tools:context=".ResultActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/upper_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/score_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/detail_upper" />

                <Button
                    android:id="@+id/rtn_button"
                    android:layout_width="33dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@mipmap/detail_return"
                    android:contentDescription="@string/score_txt"
                    app:layout_constraintStart_toStartOf="@+id/upper_bg"
                    app:layout_constraintTop_toTopOf="@+id/upper_bg"
                    app:srcCompat="@mipmap/detail_return" />

                <ImageView
                    android:id="@+id/pic_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/score_txt"
                    app:layout_constraintBottom_toBottomOf="@+id/upper_bg"
                    app:layout_constraintEnd_toEndOf="@+id/upper_bg"
                    app:layout_constraintStart_toStartOf="@+id/upper_bg"
                    app:layout_constraintTop_toTopOf="@+id/upper_bg"
                    app:layout_constraintVertical_bias="0.35"
                    app:srcCompat="@mipmap/detail_pic" />

                <ImageView
                    android:id="@+id/flw_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:contentDescription="@string/score_txt"
                    app:layout_constraintBottom_toBottomOf="@+id/pic_bg"
                    app:layout_constraintEnd_toEndOf="@+id/pic_bg"
                    app:layout_constraintStart_toStartOf="@+id/pic_bg"
                    app:layout_constraintTop_toTopOf="@+id/pic_bg"
                    tools:srcCompat="@mipmap/detail_flwpic" />

                <TextView
                    android:id="@+id/name_ch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/score_txt"
                    android:text="@string/flw_name_ch"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/upper_bg"
                    app:layout_constraintEnd_toEndOf="@+id/upper_bg"
                    app:layout_constraintStart_toStartOf="@+id/upper_bg"
                    app:layout_constraintTop_toBottomOf="@+id/pic_bg"
                    app:layout_constraintVertical_bias="0.100000024" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/upper_bg"
                    app:layout_constraintStart_toStartOf="@+id/upper_bg"
                    app:layout_constraintTop_toBottomOf="@+id/name_ch"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/score"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4" />

                    <TextView
                        android:id="@+id/score_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/score_txt"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/percent"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/detail_divider" />

            <TextView
                android:id="@+id/description_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:maxEms="14"
                android:text="@string/description_txt"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/divider2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/detail_divider" />

            <TextView
                android:id="@+id/info_pic_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/info_pic"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/info_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/flw_name_en"
                app:srcCompat="@mipmap/detail_infopic"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="229dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

